--- a/mail-marketing/index.html
+++ b/mail-marketing/index.html
@@ -167,7 +167,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 Proteína vegetal lista para tomar</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS->
                                                 <button>
                                             </div>
@@ -186,7 +186,7 @@
                                                 Únete a los más de 143,567 participantes que
                                                 están mejorando su salud digestiva</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS->
                                                 <button>
                                             </div>
@@ -232,7 +232,7 @@
                                                 ayudará a atraer al mejor talento para
                                                 Danone México</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #1a5ea9; border: none;">VER MÁS->
                                                 </button>
                                             </div>
@@ -256,7 +256,7 @@
                                             ¡Queremos verte crecer!</p>
                                     </td>
                                     <td style="display: flex; justify-content: center;">
-                                        <button
+                                        <button aria-label="Ver más"
                                             style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1.2rem; color: #fff; background-color: #12146e; border: none;">VER MÁS->
                                         </button>
                                     </td>
@@ -282,7 +282,7 @@
                                                 ¡Conoce las increíbles iniciativas que
                                                 tuvimos con las comunidad del plantel!</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #d6007d; border: none;">VER MÁS->
                                                 </button>
                                             </div>
@@ -299,7 +299,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 ¡Sembramos alrededor de 50 árboles!</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #d6007d; border: none;">VER MÁS->
                                                 </button>
                                             </div>
@@ -328,7 +328,7 @@
                                         </p>
                                     </td>
                                     <td style="display: flex; justify-content: center;">
-                                        <button
+                                        <button aria-label="Ver más"
                                             style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #ec8a03; border: none;">VER VIDEO->
                                         </button>
                                     </td>
@@ -353,7 +353,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 Continuamos impulsando el modelo empresarial actual a uno mas sostenible, inclusivo y justo</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #6bc2cf; border: none;">VER MÁS->
                                                 </button>
                                             </div>
@@ -370,7 +370,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 Un mensaje importante de nuestro CEO</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #6bc2cf; border: none;">VER MÁS->
                                                 </button>
                                             </div>
@@ -390,7 +390,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 Tania Paredes, nuestra directora de Bonafont, nos cuenta su perspectiva en torno al marketing actual y los retos que enfrenta la marca</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button
+                                                <button aria-label="Ver más"
                                                     style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #6bc2cf; border: none;">VER MÁS->
                                                 </button>
                                             </div>
