--- a/mail-marketing/index.html
+++ b/mail-marketing/index.html
@@ -167,9 +167,7 @@
                                                 style="text-align: center; color: #12146e; font-weight: 600; font-size: 0.7rem; margin-top: -0.5rem;">
                                                 Proteína vegetal lista para tomar</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button aria-label="Ver más"
-                                                    style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS->
-                                                <button>
+                                                <button aria-label="Ver más" style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS-></button>
                                             </div>
                                         </div>
                                     </td>
@@ -186,9 +184,7 @@
                                                 Únete a los más de 143,567 participantes que
                                                 están mejorando su salud digestiva</p>
                                             <div style="display: flex; justify-content: center;">
-                                                <button aria-label="Ver más"
-                                                    style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS->
-                                                <button>
+                                                <button aria-label="Ver más" style="cursor: pointer; width: auto; border-radius: 25px; padding: 0.5rem 1rem; color: #fff; background-color: #47a13d; border: none;">VER MÁS-></button>
                                             </div>
                                         </div>
                                     </td>
